--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,10 @@ dependencies {
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'com.github.walkyst:lavaplayer-fork:1.3.97'
     implementation 'org.jsoup:jsoup:1.15.1'
-
+    implementation 'com.mariten:kanatools:1.3.0'
+    // implementation 'com.atilika.kuromoji:kuromoji:0.9.0'
+    // implementation 'com.atilika.kuromoji:kuromoji-ipadic:0.9.0'
+    implementation 'com.ibm.icu:icu4j:71.1'
 }
 
 test {
