--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'net.dv8tion:JDA:5.0.0-alpha.12'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
-    implementation 'dev.felnull:felnull-java-library:1.49'
+    implementation 'dev.felnull:felnull-java-library:1.51'
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'com.github.walkyst:lavaplayer-fork:1.3.97'
@@ -45,4 +45,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
