--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'dev.felnull'
-version '1.2'
+version '1.3'
 apply plugin: 'application'
 mainClassName = 'dev.felnull.ttsvoice.Main'
 
@@ -50,5 +50,11 @@ test {
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+jar {
+    manifest {
+        attributes 'Implementation-Version': project.version
     }
 }
