--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'dev.felnull'
-version '1.3'
+version '1.4'
 apply plugin: 'application'
 mainClassName = 'dev.felnull.ttsvoice.Main'
 
@@ -39,8 +39,8 @@ dependencies {
     implementation 'com.github.walkyst:lavaplayer-fork:1.3.97'
     implementation 'org.jsoup:jsoup:1.15.1'
     implementation 'com.mariten:kanatools:1.3.0'
-    // implementation 'com.atilika.kuromoji:kuromoji:0.9.0'
-    // implementation 'com.atilika.kuromoji:kuromoji-ipadic:0.9.0'
+    implementation 'com.atilika.kuromoji:kuromoji:0.9.0'
+    implementation 'com.atilika.kuromoji:kuromoji-ipadic:0.9.0'
     implementation 'com.ibm.icu:icu4j:71.1'
 }
 
