--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'dev.felnull'
-version '1.12'
+version '1.13'
 apply plugin: 'application'
 mainClassName = 'dev.felnull.ttsvoice.Main'
 
@@ -42,6 +42,8 @@ dependencies {
     implementation 'com.atilika.kuromoji:kuromoji:0.9.0'
     implementation 'com.atilika.kuromoji:kuromoji-ipadic:0.9.0'
     implementation 'com.ibm.icu:icu4j:71.1'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+
 }
 
 test {
