--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ version '1.16'
 apply plugin: 'application'
 mainClassName = 'dev.felnull.ttsvoice.Main'
 
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+
 jar {
     manifest {
         attributes 'Main-Class': 'dev.felnull.ttsvoice.Main'
