--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -4,12 +4,9 @@ on:
   push:
     tags:
       - 'v*'
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 17
@@ -27,7 +24,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v1
         with:
-          name: Release
+          name: release
           path: build/libs
       - name: Create Release
         id: create_release
@@ -43,12 +40,7 @@ jobs:
           draft: false
           prerelease: false
       - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build/libs/release.zip
-          asset_name: IDiscordTTSVoice.zip
-          asset_content_type: application/zip
+          files: ./build/libs/release.zip
