--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -43,4 +43,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: ./build/libs/release.zip
+          files: ./build/libs
