--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -40,7 +40,7 @@ jobs:
           draft: false
           prerelease: false
       - name: Upload Release Asset
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+        uses: shogo82148/actions-upload-release-asset@v1
         with:
-          files: ./build/libs
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./build/libs/release.zip
