--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -42,5 +42,5 @@ jobs:
       - name: Upload Release Asset
         uses: shogo82148/actions-upload-release-asset@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./build/libs/release.zip
