--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -43,4 +43,4 @@ jobs:
         uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build/libs/release.zip
+          asset_path: ./build/libs/*.jar
