--- a/.github/workflows/released.yml
+++ b/.github/workflows/released.yml
@@ -31,7 +31,7 @@ jobs:
         shell: bash
         run: |
           chmod +x gradlew
-          ls
+          chmod -R +X gradle
           ./gradlew check
 
       - name: Generate Changelog #更新ログ生成
@@ -101,6 +101,7 @@ jobs:
         shell: bash
         run: |
           chmod +x gradlew
+          chmod -R +X gradle
           ./gradlew check
 
       - name: Gradle Check #チェンジログ生成してコミット
