--- a/.github/workflows/released.yml
+++ b/.github/workflows/released.yml
@@ -76,42 +76,44 @@ jobs:
           body_path: LATEST_CHANGELOG.md
           files: release/*
 
-  post-release:
-    name: Update after release
-    needs: build-release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Setup JDK #JDKセットアップ
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'corretto'
-          java-version: '17'
-
-      - name: Setup Gradle #Gradleセットアップ
-        uses: gradle/gradle-build-action@v2
-        with:
-          gradle-home-cache-cleanup: true
-
-      - name: Gradle Check #Gradle動作確認
-        shell: bash
-        run: |
-          chmod +x gradlew
-          chmod -R +X gradle
-          ./gradlew check
-
-      - name: Generate Changelog #チェンジログ生成してコミット
-        shell: bash
-        run: |
-          ./gradlew patchChangelog
-          
-          git config user.email "action@github.com"
-          git config user.name "GitHub Action"
-          git add ./CHANGELOG.md
-          git commit -m "変更ログを更新(${{ github.ref_name }})"
-          git push -u origin
-          echo "Commit done!"
+# とりあえず更新ログを手動更新
+#  post-release:
+#    name: Update after release
+#    needs: build-release
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#        with:
+#          fetch-depth: 0
+#
+#      - name: Setup JDK #JDKセットアップ
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: 'corretto'
+#          java-version: '17'
+#
+#      - name: Setup Gradle #Gradleセットアップ
+#        uses: gradle/gradle-build-action@v2
+#        with:
+#          gradle-home-cache-cleanup: true
+#
+#      - name: Gradle Check #Gradle動作確認
+#        shell: bash
+#        run: |
+#          chmod +x gradlew
+#          chmod -R +X gradle
+#          ./gradlew check
+#
+#      - name: Generate Changelog #チェンジログ生成してコミット
+#        shell: bash
+#        run: |
+#          ./gradlew patchChangelog
+#
+#          git checkout $TARGET_BRANCH
+#          git config user.email "action@github.com"
+#          git config user.name "GitHub Action"
+#          git add ./CHANGELOG.md
+#          git commit -m "変更ログを更新(${{ github.ref_name }})"
+#          git push -u origin
+#          echo "Commit done!"
