プロジェクトアイコン追加

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.run
+
 ### Java template
 # Compiled class file
 *.class
@@ -101,7 +101,7 @@ fabric.properties
 ### Example user template
 
 # IntelliJ project files
-.idea
+.idea/*
 *.iml
 out
 gen
@@ -172,3 +172,7 @@ $RECYCLE.BIN/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+.run
+
+# .ideaの除外
+!.idea/icon.png
