--- a/.gitignore
+++ b/.gitignore
@@ -172,7 +172,9 @@ $RECYCLE.BIN/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-.run
-
 # .ideaの除外
 !.idea/icon.png
+
+# 実行関係
+.run/*
+!.run/runConfigurations
