--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -14,30 +14,23 @@ jobs:
 
     steps:
       - name: Checkout # チェックアウト
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
 
       - name: Setup JDK # JDKセットアップ
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'corretto'
           java-version: '17'
 
       - name: Setup Gradle # Gradleセットアップ
-        uses: gradle/gradle-build-action@v2
-        with:
-          gradle-home-cache-cleanup: true
-
-      - name: Check # Check
-        shell: bash
-        run: |
-          chmod +x gradlew
-          chmod -R +X gradle
-          ./gradlew check
+        uses: gradle/actions/setup-gradle@v4
 
       - name: Build # ビルド
         shell: bash
         run: |
-          ./gradlew build --stacktrace --no-daemon
+          chmod +x gradlew
+          chmod -R +X gradle
+          ./gradlew build --stacktrace
