--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -19,7 +19,14 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
+      - name: 'Set up JDK 25'
+        uses: actions/setup-java@v4
+        with:
+          java-version: '25'
+          distribution: 'temurin'
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2025.3
+        with:
+          args: --jdk-path,${{ env.JAVA_HOME }}
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
