Qodana: JAVA_HOME環境変数を設定

--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -21,5 +21,7 @@ jobs:
           fetch-depth: 0
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2025.3
+        with:
+          args: -e,JAVA_HOME=/root/.jdks/jdk
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
