--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -1,11 +1,15 @@
 name: Qodana
+
+# QodanaがGradle 9 + Java 25ツールチェーンに対応するまで無効化
+# 参照: https://youtrack.jetbrains.com/issue/IDEA-379314
+# 参照: https://youtrack.jetbrains.com/issue/QD-4936
 on:
   workflow_dispatch:
-  pull_request:
-  push:
-    branches:
-      - main
-      - 'releases/*'
+  # pull_request:
+  # push:
+  #   branches:
+  #     - main
+  #     - 'releases/*'
 
 jobs:
   qodana:
